docs(spring-boot): triage 429 CratonVM-specific classes from the 2026-07-17 rerun
Investigated the 429 classes confirmed CratonVM-specific (not pre-existing
HotSpot issues) from the 510-class rerun, in parallel across 18 module/
module-group investigation passes, plus a dedicated CRASH-cluster doc for
the 5 fatal crashes. Wrote/updated 99 docs under docs/known-issues/springboot/,
clustered by root-cause signature rather than one-doc-per-class.

Dominant cross-module themes this round: a JUnit5 InterceptingExecutableInvoker
retry-storm HANG (29 classes/20 modules, not yet root-caused); a Class.getMethods()
hierarchy-dedup gap causing Spring destroy-method-resolution ambiguity
(15+ modules, confirmed at native-builtins/src/lang_class.rs::collect_public_methods,
independently filed under 3 doc names -- not yet consolidated); a
CapturedOutput/OutputCaptureExtension empty-output gap (~20 classes); and a
PKCS12/PEM keystore-parsing defect confirmed across 5 independent modules.

Also fixed and verified live (rebuilt + reran the affected classes, both now
PASS): String.format/PrintStream.printf's %n conversion hardcoded '\n'
instead of the platform line separator on Windows -- a broad-blast-radius
bug found while triaging, not specific to the classes that surfaced it.
Moved to docs/internal/springboot/ per the fixed-bug convention.

See apps/spring-boot-suite-runner/RESULTS-20260717.md for the full rerun
methodology and docs/known-issues/springboot/README.md's new 2026-07-17
section for the consolidated doc index.